crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_bytes.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
ENDLESS BYTE STRING

  × I cannot find the end of this byte string:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a closing double quote to end the byte string.
