crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_indent_alias.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a variable after `as`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Name the whole matched value, as in `(pattern as name)`.
