crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_indent_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f\nx = 1"
---
nash::syntax

  × Expected an indented pattern.
   ╭─[src/Main.nash:2:1]
 1 │ f
 2 │ x = 1
   · ─
   ╰────
  help: Indent the pattern to continue this expression.
