crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_list.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a pattern or `]`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a list element, or close an empty list with `]`.
