crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_number.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
WEIRD NUMBER

  × I thought I was reading a number, but I ran into some weird stuff here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I recognize integers like 42 and 0x002B. Is there a way to write it like one of
        those? Nash has no floating point numbers.
