crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f \tx = 1"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:3]
 1 │ f   x = 1
   ·   ──
   ╰────
  help: Replace the tab with spaces.
