crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
PROBLEM IN PATTERN

  × I wanted to parse a pattern next, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I am not sure why I am getting stuck exactly. I just know that I want a pattern
        next. Something as simple as maybeHeight or result would work!
