crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_string.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f \"unfinished"
---
nash::syntax::unclosed_delimiter

  × Expected `"` to close `"`.
   ╭─[src/Main.nash:1:3]
 1 │ f "unfinished
   ·   ┬┬
   ·   │╰── opened here
   ·   ╰── expected `"`
   ╰────
  help: Add `"` here.
