crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_tuple.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a pattern after `(`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a pattern, or close an empty tuple with `)`.
