crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_pattern_wildcard_not_var.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNEXPECTED NAME

  × Variable names cannot start with underscores like this:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ────
   ╰────
  help: You can either have an underscore like _ to ignore the value, or you can have a
        name like foo to use the matched value.
