crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_repr_arrow.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a : Term Term) = Box"
---
nash::syntax

  × Representation bounds cannot contain arrows.
   ╭─[src/Main.nash:1:21]
 1 │ type box ('a : Term Term) = Box
   ·                     ─
   ╰────
  help: Use a bound such as `Storable`; constructor kinds are inferred.
